<resources>
    <string name="app_name">MoviesApp</string>
    <string name="error_message">Error loading data</string>
    <string name="search_by_popular">Search by Popular</string>
    <string name="search_by_top_rated">Search by Top Rated</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="original_title">Original Title:</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="favorite_on">Favorite</string>
    <string name="favorite_off">No Favorite yet!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_fav">Saved in favorites</string>
    <string name="del_fav">deleted from favorites</string>
</resources>
