<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_p"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/search_by_popular"/>
    <item
        android:id="@+id/action_search_t"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/search_by_top_rated"/>
    <item
        android:id="@+id/search"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/search"/>
    <item
        android:id="@+id/favorites"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        android:title="@string/favorites"
        android:icon="@drawable/ic_star_yellow"/>
</menu>