<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.unam.android.leonardotalero.moviesapp.DetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:id="@+id/movie_art"
                android:transitionName="albumArt" />



                <TextView


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="bottom"
                    android:textColor="@android:color/white"
                    android:background="#55000000"
                    android:id="@+id/title_caption"
                    android:text="@string/original_title"
                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="bottom"
                    android:textColor="@android:color/white"
                    android:background="#55000000"
                    android:id="@+id/title"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="bottom"
                    android:textColor="@android:color/white"
                    android:background="#55000000"
                    android:text="New Text"
                    android:id="@+id/release_date" />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="bottom"
                android:textColor="@android:color/white"
                android:background="#55000000"
                android:text="New Text"
                android:id="@+id/vote_ave" />
             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:background="#55000000"
                android:text="New Text"
                android:id="@+id/popularity"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:background="#55000000"
                    android:text="New Text"
                    android:id="@+id/movie_over"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:background="#55000000"
                android:text="New Text"
                android:id="@+id/movie_id"/>

            <ToggleButton
                android:id="@+id/myToggleButton"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textOff="@string/favorite_off"
                android:textOn="@string/favorite_on"
                android:textAlignment="center"
                android:textSize="10sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/trailers"
                style="@style/Base.TextAppearance.AppCompat.Large"/>
            <FrameLayout
                android:id="@+id/content_videoList"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reviews"
                style="@style/Base.TextAppearance.AppCompat.Large"/>
            <FrameLayout
                android:id="@+id/content_reviewList"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>





     </ScrollView>


</LinearLayout>
